Fixing scaling issue with header image
tweaking css properties to contain header image without spilling out of div

--- a/style.css
+++ b/style.css
@@ -55,9 +55,17 @@ body {
 }
 
 .header-right{
+    display: flex;
+    object-fit:contain;
     
     align-items: center;
     background-color: rgba(219, 234, 247, 0.349);
+}
+
+.header-right img{
+    object-fit:cover;
+    width: 100%;
+    height: 100%;
 }
 
 .tiles-section{
@@ -110,6 +118,8 @@ ul {
 }
 
 .header-header a {
+    display: flex;
+    flex: 1;
     text-decoration-line: none;
     color: rgb(9, 46, 14);  
     font-weight: bold ;
@@ -132,10 +142,7 @@ ul {
 
 }
 
-.header-right img{
-    object-fit: cover;
-    object-position: left;
-}
+
 
 .quote {
     display: flex;
